# website

./: .gitignore  Caddyfile  Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
app/: main.py
app/templates/: index.html
